# tap-stackadapt

./: .env.example  .gitignore  README.md  debug_conversion_tracker_stats.py  meltano.yml  pyproject.toml
scripts/debug/: README.md  config.example.json  debug_old_stream_issue.py  requirements.txt  run_debug.sh  show_api_calls.py  test_all_trackers.py  test_conversion_tracker_endpoint.py  tracker_raw_response.txt
tap_stackadapt/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
